--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/kmeans-js@0.1.2/kMeans.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-sankey/0.12.2/d3-sankey.min.js"></script>
     <script type="text/javascript" src="jDBSCAN.js"></script>
-
+    <script type="text/javascript" src="matrixGenerator.js"></script>
 
     <style>
 
