--- a/old/matrixCompare.html
+++ b/old/matrixCompare.html
@@ -30,7 +30,6 @@
     <script type="text/javascript" src="jDBSCAN.js"></script>
     <script type="text/javascript" src="matrixGenerator.js"></script>
     <script type="text/javascript" src="gamble.js"></script>
-    <script type="text/javascript" src="utils.js"></script>
 
     <style>
 
@@ -118,8 +117,8 @@
 
     // getData().then(doit);
 
-    // getDataCsv('notes.csv').then(doit2);
-    getDataCsv('simpsons.csv').then(doit2);
+    getDataCsv('notes.csv').then(doit2);
+    // getDataCsv('simpsons.csv').then(doit2);
 
     // doit3();
 
@@ -145,18 +144,20 @@
     function doit2() {
 
         let linem = data.map(d => d.name);
+        /*
 
                 let mat = csv2matrix(data, Object.keys(data[0]).slice(1, Object.keys(data[0]).length - 1));
 
                 displayMatrix(mat, d3.select("#main"), 900, 900, true, false, true, linem, Object.keys(data[0]).slice(1, Object.keys(data[0]).length - 1))
                 displayMatrix(mat, d3.select("#main2"), 900, 900, false, false, false, linem, Object.keys(data[0]).slice(1, Object.keys(data[0]).length - 1))
+        */
 
 
- /*       let mat = csv2table(data, Object.keys(data[0]).slice(1));
+        let mat = csv2table(data, Object.keys(data[0]).slice(1));
         console.log(data);
         console.log(mat);
         displayTable(mat, d3.select("#main"), 1200, 1200, true, true, d3.range(data.length), Object.keys(data[0]).slice(1))
-        displayTable(mat, d3.select("#main2"), 1200, 1200, false, true, d3.range(data.length), Object.keys(data[0]).slice(1))*/
+        displayTable(mat, d3.select("#main2"), 1200, 1200, false, true, d3.range(data.length), Object.keys(data[0]).slice(1))
 
 
     }
